correctif concernant le text profil et ajout d'un header pour la version mobile

--- a/src/styles/accueil.css
+++ b/src/styles/accueil.css
@@ -81,6 +81,7 @@
 /* * Toggle Switch */
 .container-toggle {
 	position: fixed;
+	z-index: 6;
 	top: 5%;
 	right: 5%;
 	display: flex;
@@ -250,5 +251,39 @@ input:checked + .slider:before {
 	.title {
 		font-size: 50px;
 		padding: 40px;
+		font-style: italic;
+	}
+	.scroll-list {
+		display: none;
+	}
+	.container-section-profil {
+		margin-top: 8em;
+	}
+}
+
+/* * Header mobile */
+
+@media screen and (max-width: 430px) {
+	.scroll-box {
+		display: block;
+		align-content: center;
+		position: sticky;
+		top: 0;
+		z-index: 5;
+		width: 100%;
+		height: 60px;
+		margin-top: 80vh;
+		border-radius: 0 0 40px 40px;
+		background-color: rgb(105, 105, 105);
+	}
+	.scroll-box > h2 {
+		font-size: 30px;
+		color: white;
+		margin: 0 0 0 50px;
+		font-family: var(--font-family);
+		font-style: italic;
+	}
+	.container-toggle {
+		top: 1%;
 	}
 }
